폼과 보안초기

--- a/addr/templates/addr/con_detail.html
+++ b/addr/templates/addr/con_detail.html
@@ -8,16 +8,19 @@
             {{ con.published_date }}
         </div>
     {% endif %}
+    {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'addr:con_edit' pk=con.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    {% endif %}
     <div class="name">
         <h1>{{ con.name }}</h1>
     </div>
-    <div>
+    <div class="detail">
         <p>연락처1 : {{ con.num }}</p>
         {% if con.num2 %}
             <p>연락처2 : {{ con.num2 }}</p>
         {% endif %}
         {% if con.email %}
-            <p>{{ con.email }}</p>
+            <p>이메일 : {{ con.email }}</p>
         {% endif %}
         <p>작성자 : {{ con.writer }}</p>
     </div>
