--- a/addr/templates/addr/base.html
+++ b/addr/templates/addr/base.html
@@ -6,10 +6,14 @@
     <title>Address List</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'css/contact.css' %}">
 </head>
 <body>
     <div class="page-header">
+        {% if user.is_authenticated %}
+            <a href="{% url 'addr:con_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        {% endif %}
         <h1><a href="/">Address List</a></h1>
     </div>
     <div class="content container">
