퍼블리쉬와 삭제기능 추가

--- a/addr/static/css/contact.css
+++ b/addr/static/css/contact.css
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
     float: right;
 }
 
-.post-form textarea, .post-form input {
+.addr-form textarea, .addr-form input {
     width: 100%;
 }
 
@@ -37,10 +37,11 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
-.post {
+.addr {
     margin-bottom: 70px;
 }
 
-.post h1 a, .post h1 a:visited {
+.addr h1 a, .addr h1 a:visited {
     color: #000000;
 }
+
