--- a/addr/templates/addr/base.html
+++ b/addr/templates/addr/base.html
@@ -13,6 +13,7 @@
     <div class="page-header">
         {% if user.is_authenticated %}
             <a href="{% url 'addr:con_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            <a href="{% url 'addr:con_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
         {% endif %}
         <h1><a href="/">Address List</a></h1>
     </div>
