--- a/addr/templates/addr/con_detail.html
+++ b/addr/templates/addr/con_detail.html
@@ -7,11 +7,14 @@
         <div class="date">
             {{ con.published_date }}
         </div>
+    {% else %}
+        <a class="btn btn-default" href="{% url 'addr:con_publish' pk=con.pk %}">Publish</a>
     {% endif %}
     {% if user.is_authenticated %}
         <a class="btn btn-default" href="{% url 'addr:con_edit' pk=con.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-default" href="{% url 'addr:con_remove' pk=con.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
     {% endif %}
-    <div class="name">
+    <div class="addr">
         <h1>{{ con.name }}</h1>
     </div>
     <div class="detail">
