--- a/addr/static/css/contact.css
+++ b/addr/static/css/contact.css
@@ -38,10 +38,14 @@ h1, h2, h3, h4 {
 }
 
 .addr {
-    margin-bottom: 70px;
+    margin-bottom: 50px;
 }
 
 .addr h1 a, .addr h1 a:visited {
     color: #000000;
+}
+
+.memo {
+    margin: 20px 0px 20px 20px;
 }
 
