--- a/addr/templates/addr/con_detail.html
+++ b/addr/templates/addr/con_detail.html
@@ -11,9 +11,11 @@
     {% else %}
         <a class="btn btn-default" href="{% url 'addr:con_publish' pk=con.pk %}">Publish</a>
     {% endif %}
-    <a class="btn btn-default" href="{% url 'addr:con_edit' pk=con.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-    <a class="btn btn-default" href="{% url 'addr:con_remove' pk=con.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
-    <a class="btn btn-default" href="{% url 'addr:con_secret_addr' pk=con.pk %}"><span class="glyphicon glyphicon-eye-open"></span></a>
+    {% if user.is_authenticated %}
+        <a class="btn btn-default" href="{% url 'addr:con_edit' pk=con.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        <a class="btn btn-default" href="{% url 'addr:con_remove' pk=con.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+        <a class="btn btn-default" href="{% url 'addr:con_secret_addr' pk=con.pk %}"><span class="glyphicon glyphicon-eye-open"></span></a>
+    {% endif %}
     <div class="addr">
         <h1>{{ con.name }}</h1>
     </div>
@@ -27,6 +29,13 @@
         {% endif %}
         <p>작성자 : {{ con.writer }}</p>
     </div>
+        <a href="{% url 'addr:con_memo_new' pk=con.pk %}"><span class="glyphicon glyphicon-plus-sign"></span></a>
+    {% for memo in  contact.memos.all %}
+        <div class="memo">
+            <div class="date">{{ memo.author }}</div>
+            <strong> -" {{ memo.text|linebreaks }} " </strong>
+        </div>
+        {% endfor %}
 </div>
 {% else %}
     <h3>You cannot access this page without a Login.</h3>
